# AdventOfCode

./: .gitattributes  .gitignore  Cargo.toml  day1b.rs  day2.rs  day2b.rs  day3.rs  day4b.in  day5.rs  init.sh  readme.md
2015/rs/: Cargo.toml
2016/: Cargo.toml
2017/: Cargo.toml
2017/src/: day10.rs  day11.rs  day6b.rs  day7b.rs
2018/: Cargo.toml
2018/data/: day24.in
2018/py/: day17b.py  day18b.py  day21b.py  day23a.py
2018/rs/: Cargo.toml
2018/src/: day11b.rs  day12b.py  day14.rs  day14b.rs  day16.rs  day17.py  day19.py  day21.py  day22b.py  day23c.py  day23e.py  day3b.rs  day6.rs  day7b.rs  day8.rs  day9.rs
2019/: Cargo.toml
2019/data/: day10-0.in  day12p-0.in  day12p-1.in  day12p.in  day18b.in  day20-2.in
2019/py/: day03a.py  day06b.py
2019/rs/: Cargo.toml
2019/src/: day10.rs  day11b.rs  day12b.rs  day14.rs  day15.rs  day16.rs  day19.rs  day19b.rs  day1b.rs  day20.rs  day20b.rs  day21.rs  day21b.rs  day22b.rs  day3b.rs  day4.rs  day5b.rs  day6.py  day6b.rs  day8.rs
2020/: Cargo.toml
2020/cpp/: day02a.cpp  day02b.cpp  day03b.cpp  day05a.cpp  day05b.cpp
2020/data/: day06-1.in
2020/src/: day1.rs  day1b.rs  day3.rs  day3b.rs  day4b.rs  day6b.rs  day7b.rs  day8.rs  day9.rs  day9b.rs
2020/src/cpp/: day01a.cpp  day01b.cpp  day03a.cpp  day04a.cpp
2021/: Cargo.toml
2021/go/: day01.go  day02.go
2021/py/: day18.py  test_day18.py
2021/rs/: Cargo.toml
2022/rs/: Cargo.toml
2023/rs/: Cargo.toml
2024/cpp/src/: day01.cpp  day02.cpp  day03.cpp
2024/go/: go.mod
2024/go/day01/: main.go
data/: day18b-0.in  day20-1.in  day24-0.in  day9b.in
src/: day1.rs  day10.rs  day10b.rs  day11.rs  day11b.rs  day12.py  day12.rs  day12b.rs  day13.py  day13.rs  day13b.py  day13b.rs  day14b.rs  day15.py  day15.rs  day15b.py  day15b.rs  day16.rs  day16b.rs  day17.rs  day17b.rs  day18.py  day18.rs  day18b.rs  day19.rs  day19b.rs  day2.rs  day22b.rs  day23b.py  day23d.py  day25.py  day2b.rs  day3.rs  day3b.py  day3b.rs  day4.rs  day4b.rs  day5.rs  day5b.rs  day6.rs  (+7 more)
templates/: dayXX.go  dayXX.rs
