[package]
name = "Advent_of_Code_2019"
version = "0.1.0"
authors = ["Adrien Coulier <adrien.coulier@free.fr>"]

[dependencies]
itertools = "0.8.2"

[[bin]]
name = "day1"
path = "src/day1.rs"

[[bin]]
name = "day1b"
path = "src/day1b.rs"

[[bin]]
name = "day2"
path = "src/day2.rs"

[[bin]]
name = "day3"
path = "src/day3.rs"

[[bin]]
name = "day3b"
path = "src/day3b.rs"

[[bin]]
name = "day4"
path = "src/day4.rs"

[[bin]]
name = "day4b"
path = "src/day4b.rs"

[[bin]]
name = "day5"
path = "src/day5.rs"

[[bin]]
name = "day5b"
path = "src/day5b.rs"

[[bin]]
name = "day6"
path = "src/day6.rs"
