[package]
name = "Advent_of_Code_2020"
version = "0.1.0"
authors = ["Adrien Coulier <adrien.coulier@free.fr>"]

[dependencies]
regex = "1.4.2"



[[bin]]
name = "day1"
path = "src/day1.rs"

[[bin]]
name = "day1b"
path = "src/day1b.rs"

[[bin]]
name = "day2"
path = "src/day2.rs"

[[bin]]
name = "day2b"
path = "src/day2b.rs"

[[bin]]
name = "day3"
path = "src/day3.rs"

[[bin]]
name = "day3b"
path = "src/day3b.rs"
